--- a/social_book/templates/signup.html
+++ b/social_book/templates/signup.html
@@ -39,8 +39,7 @@
 
                     <div class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm">
 
-                        <a href="signin.html"
-                            class="bg-pink-500 pink-500 px-6 py-3 rounded-md shadow text-white">Login</a>
+                        <a href="/signin" class="bg-pink-500 pink-500 px-6 py-3 rounded-md shadow text-white">Login</a>
                     </div>
 
                 </div>
@@ -55,6 +54,8 @@
 
 
                 <!--<p class="mb-2 text-black text-lg"> Register to manage your account </p>-->
+
+                <!-- Error Message-->
 
                 <div>
                     <style>
@@ -96,7 +97,7 @@
                         class="bg-gradient-to-br from-pink-500 py-3 rounded-md text-white text-xl to-red-400 w-full">Sign
                         Up</button>
                     <div class="text-center mt-5 space-x-2">
-                        <p class="text-base"> Do you have an account? <a href="form-login.html"> Login </a></p>
+                        <p class="text-base"> Do you have an account? <a href="/signin"> Login </a></p>
                     </div>
                 </form>
             </div>
@@ -113,7 +114,7 @@
                     <a href="#"> Terms</a>
                     <a href="#"> Privacy</a>
                 </div>
-                <p class="capitalize"> © copyright 2020 by socol</p>
+                <p class="capitalize"> © copyright 2025 by YMC SNS System</p>
             </div>
         </div>
 
