post upload bug solved

--- a/social_book/templates/index.html
+++ b/social_book/templates/index.html
@@ -84,7 +84,7 @@
                                 <p class=" my-3 leading-6"> Upload pics
                                 </p>
                                 <div>
-                                    <input type="file" name="" image_upload>
+                                    <input type="file" name="image_upload">
                                     <!-- <a href="#" class="button soft-warning small"> Choose file</a> -->
                                     <textarea class="button soft-warning small" name="caption"
                                         placeholder="caption..."></textarea>
