--- a/social_book/templates/index.html
+++ b/social_book/templates/index.html
@@ -202,7 +202,7 @@
                     <a href="#" class="see-all">See all</a>
                 </div> -->
 
-                <!-- profile -->
+                <!-- profile image -->
 
                 <a href="#">
                     <img src="{{user_profile.profileimg.url}}" class="header-avatar" alt="">
@@ -239,7 +239,7 @@
                         <div class="flex flex-1 items-center space-x-4">
                             <a href="#">
                                 <div class="bg-gradient-to-tr from-yellow-600 to-pink-600 p-0.5 rounded-full">
-                                    <img src="{% static 'assets/images/avatars/avatar-2.jpg' %}"
+                                    <img src="{{user_profile.profileimg.url}}"
                                         class="bg-gray-200 border border-white rounded-full w-8 h-8">
                                 </div>
                             </a>
