--- a/social_book/templates/index.html
+++ b/social_book/templates/index.html
@@ -231,7 +231,7 @@
 
                 <!-- post 1-->
 
-                {% for post in posts %}
+                {% for post in posts reversed %}
                 <div class="bg-white shadow rounded-md  -mx-2 lg:mx-0">
 
                     <!-- post header-->
