--- a/social_book/templates/profile.html
+++ b/social_book/templates/profile.html
@@ -38,7 +38,7 @@
 					<span style="color: white; font-size: 27px;"><b>{{user_post_length}} Posts</b></span>
 
 					<span style="color: white; font-size: 27px;"><b>{{user_followers}} Followers</b></span>
-					<span style="color: white; font-size: 27px;"><b>{{user_following}} Following</b></span>
+					<span style="color: white; font-size: 27px;"><b>{{user_following}} Followings</b></span>
 
 					<input type="hidden" value="{{user.username}}" name="follower" />
 					<input type="hidden" value="{{user_object.username}}" name="user" />
