--- a/social_book/templates/index.html
+++ b/social_book/templates/index.html
@@ -243,7 +243,7 @@
                                         class="bg-gray-200 border border-white rounded-full w-8 h-8">
                                 </div>
                             </a>
-                            <span class="block capitalize font-semibold "> <a href="#"> @{{post.user}}</a> </span>
+                            <span class="block capitalize font-semibold "> <a href="/profile/{{post.user}}"> @{{post.user}}</a> </span>
                         </div>
                         <div>
                             <a href="#"> <i
