--- a/social_book/templates/index.html
+++ b/social_book/templates/index.html
@@ -346,40 +346,47 @@
                         </div>
 
 
-                        <!-- <div class="border-t pt-4 space-y-4 ">
-                            <div class="flex">
-                                <div class="w-10 h-10 rounded-full relative flex-shrink-0">
-                                    <img src="{% static 'assets/images/avatars/avatar-1.jpg' %}" alt=""
-                                        class="absolute h-full rounded-full w-full">
-                                </div>
-                                <div
-                                    class="text-gray-700 py-2 px-3 rounded-md bg-gray-100 h-full relative lg:ml-5 ml-2 lg:mr-20   ">
-                                    <p class="leading-6">Y'all like billie eillish? <urna class="i uil-heart"></urna> <i
-                                            class="uil-grin-tongue-wink"> </i> </p>
-                                    <div class="absolute w-3 h-3 top-3 -left-1 bg-gray-100 transform rotate-45 "></div>
-                                </div>
-                            </div>
-                            <div class="flex">
-                                <div class="w-10 h-10 rounded-full relative flex-shrink-0">
-                                    <img src="{% static 'assets/images/avatars/avatar-1.jpg' %}" alt=""
-                                        class="absolute h-full rounded-full w-full">
-                                </div>
-                                <div
-                                    class="text-gray-700 py-2 px-3 rounded-md bg-gray-100 h-full relative lg:ml-5 ml-2 lg:mr-20   ">
-                                    <p class="leading-6">She's my favourite <i class="uil-grin-tongue-wink-alt"></i>
-                                    </p>
-                                    <div class="absolute w-3 h-3 top-3 -left-1 bg-gray-100 transform rotate-45 "></div>
-                                </div>
-                            </div>
-                        </div> -->
 
-                        <!-- <div class="bg-gray-100 bg-gray-100 rounded-full rounded-md relative ">
-                            <input type="text" placeholder="post a comment" class="bg-transparent max-h-10 shadow-none">
-                            <div class="absolute bottom-0 flex h-full items-center right-0 right-3 text-xl space-x-2">
-                                <a href="#"> <i class="uil-image"></i></a>
-                                <a href="#"> <i class="uil-video"></i></a>
+                        <!-- Comment Section Starts -->
+                        <div class="border-t pt-4 space-y-4">
+
+                            <!-- Existing comment loop -->
+                            {% for comment in post.comments %}
+                            <div class="flex">
+                                <div class="w-10 h-10 rounded-full relative flex-shrink-0">
+                                    <img src="{{comment.profile.profileimg.url}}" alt="profileimg"
+                                        class="absolute h-full rounded-full w-full">
+                                </div>
+                                <div
+                                    class="text-gray-700 py-2 px-3 rounded-md bg-gray-100 h-full relative lg:ml-5 ml-2 lg:mr-20">
+                                    <p class="leading-6">
+                                        <strong>{{ comment.user.username }}:</strong> {{ comment.comment_text }}
+                                    </p>
+                                    <div class="absolute w-3 h-3 top-3 -left-1 bg-gray-100 transform rotate-45"></div>
+                                </div>
                             </div>
-                        </div> -->
+                            {% empty %}
+                            <p class="text-gray-500">No comments yet.</p>
+                            {% endfor %}
+
+                        </div>
+
+                        <!-- Add Comment Form -->
+                        <form action="{% url 'add-comment' %}" method="POST" class="mt-3">
+                            {% csrf_token %}
+                            <input type="hidden" name="post_id" value="{{ post.id }}">
+                            <div class="bg-gray-100 rounded-md relative mt-2">
+                                <input type="text" name="comment_text" placeholder="Post a comment"
+                                    class="bg-transparent max-h-10 shadow-none px-3 py-1 w-full rounded-full focus:outline-none">
+                                <div class="absolute bottom-0 flex h-full items-center right-3 text-xl space-x-2">
+                                    <button type="submit">
+                                        <i class="uil-message text-gray-600 hover:text-blue-600"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                        <!-- Comment Section Ends -->
+
 
                     </div>
 
@@ -406,8 +413,7 @@
                         <div class="flex items-center justify-between py-3">
                             <div class="flex flex-1 items-center space-x-4">
                                 <a href="/profile/{{suggestion.user}}">
-                                    <img src="{{suggestion.profileimg.url}}"
-                                        class="bg-gray-200 rounded-full w-10 h-10">
+                                    <img src="{{suggestion.profileimg.url}}" class="bg-gray-200 rounded-full w-10 h-10">
                                 </a>
                                 <div class="flex flex-col">
                                     <span class="block capitalize font-semibold"> {{suggestion.user}} </span>
@@ -419,7 +425,7 @@
                                 class="border border-gray-200 font-semibold px-4 py-1 rounded-full hover:bg-pink-600 hover:text-white hover:border-pink-600 ">
                                 View User </a>
                         </div>
-                       
+
 
                     </div>
                     {% endfor %}
