--- a/social_book/templates/index.html
+++ b/social_book/templates/index.html
@@ -352,21 +352,64 @@
 
                             <!-- Existing comment loop -->
                             {% for comment in post.comments %}
-                            <div class="flex">
+                            <div class="flex relative" id="comment-{{ comment.id }}">
                                 <div class="w-10 h-10 rounded-full relative flex-shrink-0">
                                     <img src="{{comment.profile.profileimg.url}}" alt="profileimg"
                                         class="absolute h-full rounded-full w-full">
                                 </div>
+
                                 <div
                                     class="text-gray-700 py-2 px-3 rounded-md bg-gray-100 h-full relative lg:ml-5 ml-2 lg:mr-20">
-                                    <p class="leading-6">
+                                    <!-- Static comment text -->
+                                    <p class="leading-6" id="text-{{ comment.id }}">
                                         <strong>{{ comment.user.username }}:</strong> {{ comment.comment_text }}
                                     </p>
+
+                                    <!-- Edit form (hidden initially) -->
+                                    <form method="POST" action="{% url 'edit-comment' comment.id %}"
+                                        id="form-{{ comment.id }}" class="hidden">
+                                        {% csrf_token %}
+                                        <textarea name="comment_text"
+                                            class="w-full p-1 border border-gray-300 rounded">{{ comment.comment_text }}</textarea>
+                                        <div class="flex space-x-2 mt-1">
+                                            <button type="submit"
+                                                class="bg-blue-500 text-green px-2 py-1 rounded text-sm">Save</button>
+                                            <button type="button" onclick="cancelEdit('{{ comment.id }}')"
+                                                class="bg-gray-300 text-black px-2 py-1 rounded text-sm">Cancel</button>
+                                        </div>
+                                    </form>
+
                                     <div class="absolute w-3 h-3 top-3 -left-1 bg-gray-100 transform rotate-45"></div>
                                 </div>
+
+                                {% if comment.user == request.user %}
+                                <!-- Dropdown Menu -->
+                                <div class="absolute right-2 top-1">
+                                    <a href="#"><i
+                                            class="icon-feather-more-horizontal text-2xl hover:bg-gray-200 rounded-full p-2 transition -mr-1"></i></a>
+
+                                    <div class="bg-white w-56 shadow-md p-2 mt-12 rounded-md text-gray-500 hidden text-base border border-gray-100"
+                                        uk-drop="mode: hover;pos: top-right">
+                                        <ul class="space-y-1">
+                                            <!-- Edit -->
+                                            <li>
+                                                <button type="button" onclick="startEdit('{{ comment.id }}')"
+                                                    class="w-full text-left flex items-center px-3 py-2 hover:bg-gray-200 hover:text-gray-800 rounded-md">
+                                                    <i class="uil-edit-alt mr-1"></i> Edit Comment
+                                                </button>
+                                            </li>
+                                            <!-- Delete -->
+                                            <li>
+                                                <a href="{% url 'delete-comment' comment.id %}"
+                                                    class="flex items-center px-3 py-2 text-red-500 hover:bg-red-100 hover:text-red-500 rounded-md">
+                                                    <i class="uil-trash-alt mr-1"></i> Delete
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                {% endif %}
                             </div>
-                            {% empty %}
-                            <p class="text-gray-500">No comments yet.</p>
                             {% endfor %}
 
                         </div>
@@ -459,6 +502,17 @@
     <script src="{% static 'assets/js/uikit.js' %}"></script>
     <script src="{% static 'assets/js/simplebar.js' %}"></script>
     <script src="{% static 'assets/js/custom.js' %}"></script>
+    <script>
+        function startEdit(commentId) {
+            document.getElementById('text-' + commentId).style.display = 'none';
+            document.getElementById('form-' + commentId).classList.remove('hidden');
+        }
+
+        function cancelEdit(commentId) {
+            document.getElementById('text-' + commentId).style.display = 'block';
+            document.getElementById('form-' + commentId).classList.add('hidden');
+        }
+    </script>
 
 
     <script src="{% static '../../unpkg.com/ionicons%405.2.3/dist/ionicons.js' %}"></script>
