--- a/social_book/templates/index.html
+++ b/social_book/templates/index.html
@@ -212,6 +212,7 @@
                 </a>
                 <div uk-drop="mode: click;offset:9" class="header_dropdown profile_dropdown border-t">
                     <ul>
+                        <li><a href="{% url 'profile' request.user.username %}"> Profile </a> </li>
                         <li><a href="/settings"> Account setting </a> </li>
                         <!-- <li><a href="explore.html">explore </a> </li>
                                 <li><a href="#"> Help </a> </li> -->
