--- a/social_book/templates/profile.html
+++ b/social_book/templates/profile.html
@@ -28,7 +28,7 @@
 
 	<section>
 		<div class="feature-photo">
-			<figure><img src="{% static 'images/resources/timeline-1.jpg' %}" alt=""></figure>
+			<figure><img src="{{user_profile.coverimg.url}}" style="height: 400px; width: 100%;" alt=""></figure>
 			<form action="/follow" method="POST">
 				{% csrf_token %}
 
