--- a/social_book/templates/signin.html
+++ b/social_book/templates/signin.html
@@ -83,7 +83,7 @@
                     <button type="submit"
                         class="bg-gradient-to-br from-pink-500 py-3 rounded-md text-white text-xl to-red-400 w-full">Login</button>
                     <div class="text-center mt-5 space-x-2">
-                        <p class="text-base"> Not registered? <a href="/signup" class=""> Create a account </a></p>
+                        <p class="text-base"> Not registered? <a href="/signup" class="text-blue-500 hover:underline hover:text-blue-700"> Create an account </a></p>
                     </div>
                 </form>
             </div>
@@ -94,12 +94,12 @@
         <div class="lg:mb-5 py-3 uk-link-reset">
             <div
                 class="flex flex-col items-center justify-between lg:flex-row max-w-6xl mx-auto lg:space-y-0 space-y-3">
-                <div class="flex space-x-2 text-gray-700 uppercase">
+                <!-- <div class="flex space-x-2 text-gray-700 uppercase">
                     <a href="#"> About</a>
                     <a href="#"> Help</a>
                     <a href="#"> Terms</a>
                     <a href="#"> Privacy</a>
-                </div>
+                </div> -->
                 <p class="capitalize"> © copyright 2025 by YMC SNS System</p>
             </div>
         </div>
