--- a/social_book/templates/index.html
+++ b/social_book/templates/index.html
@@ -244,11 +244,15 @@
                             <a href="#">
                                 <div class="bg-gradient-to-tr from-yellow-600 to-pink-600 p-0.5 rounded-full">
                                     <img src="{{post.user_profile.profileimg.url}}"
+                                    
                                         class="bg-gray-200 border border-white rounded-full w-8 h-8">
                                 </div>
                             </a>
-                            <span class="block capitalize font-semibold "> <a href="/profile/{{post.user}}">
-                                    @{{post.user}}</a> </span>
+                            <!-- <span class="block capitalize font-semibold "> <a href="/profile/{{post.user}}">
+                                    @{{post.user}}</a> </span> -->
+                                    <span class="block capitalize font-semibold "> <a href="/profile/{{post.user.username}}">
+    @{{post.user.username}}</a> </span> <!-- user is now a ForeignKey object -->
+
                         </div>
 
 
@@ -287,7 +291,9 @@
 
                     <div class="py-3 px-4 space-y-3">
                         <p>
-                            <a href="#"><strong>{{post.user}}</strong> </a>{{post.caption}}
+                            <!-- <a href="#"><strong>{{post.user}}</strong> </a>{{post.caption}} -->
+                        <a href="#"><strong>{{post.user.username}}</strong> </a>{{post.caption}} <!-- Ensure username renders -->
+
                         </p>
 
                         <div class="flex space-x-4 lg:font-bold">
@@ -437,11 +443,13 @@
                     <div class="divide-gray-300 divide-gray-50 divide-opacity-50 divide-y px-4 ">
                         <div class="flex items-center justify-between py-3">
                             <div class="flex flex-1 items-center space-x-4">
-                                <a href="/profile/{{suggestion.user}}">
+                                <!-- <a href="/profile/{{suggestion.user}}"> -->
+                                    <a href="/profile/{{suggestion.user.username}}"></a>
                                     <img src="{{suggestion.profileimg.url}}" class="bg-gray-200 rounded-full w-10 h-10">
                                 </a>
                                 <div class="flex flex-col">
-                                    <span class="block capitalize font-semibold"> {{suggestion.user}} </span>
+                                    <!-- <span class="block capitalize font-semibold"> {{suggestion.user}} </span> -->
+                                     <span class="block capitalize font-semibold"> {{suggestion.user.username}} </span> <!-- ForeignKey -->
                                     <!-- <span class="block capitalize text-sm"> 320k followers </span> -->
                                 </div>
                             </div>
