added home icon at top

--- a/social_book/templates/profile.html
+++ b/social_book/templates/profile.html
@@ -21,6 +21,27 @@
 </head>
 
 <body>
+	<header>
+
+		<!-- Floating centered logo and home text -->
+		<div style="
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+">
+			<a href="{% url 'index' %}"
+				style="text-decoration: none; color: inherit; display: flex; align-items: center;">
+				<img src="{% static 'images/logo.png' %}" alt="Logo"
+					style="height: 50px; width: 50px; border-radius: 50%; object-fit: cover;">
+				<span style="font-size: 20px; font-weight: bold; margin-left: 10px;">Home</span>
+			</a>
+		</div>
+
+	</header>
 	<!--<div class="se-pre-con"></div>-->
 	<div class="theme-layout">
 
@@ -33,8 +54,8 @@
 				{% csrf_token %}
 
 				<div class="add-btn">
-					<span style="color: white; font-size: 27px; margin-right: 520px;"><b><u><a
-									href="/">Home</a></u></b></span>
+					<!-- <span style="color: white; font-size: 27px; margin-right: 520px;"><b><u><a
+									href="/">Home</a></u></b></span> -->
 					<span style="color: white; font-size: 27px;"><b>{{user_post_length}} Posts</b></span>
 
 					<span style="color: white; font-size: 27px;"><b>{{user_followers}} Followers</b></span>
