--- a/social_book/templates/setting.html
+++ b/social_book/templates/setting.html
@@ -18,6 +18,23 @@
 </head>
 
 <body>
+    	<!-- Floating centered logo and home text -->
+		<div style="
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+">
+			<a href="{% url 'index' %}"
+				style="text-decoration: none; color: inherit; display: flex; align-items: center;">
+				<img src="{% static 'images/logo.png' %}" alt="Logo"
+					style="height: 50px; width: 50px; border-radius: 50%; object-fit: cover;">
+				<span style="font-size: 20px; font-weight: bold; margin-left: 10px;">Home</span>
+			</a>
+		</div>
 
 
 
