--- a/social_book/templates/signin.html
+++ b/social_book/templates/signin.html
@@ -39,10 +39,10 @@
 
                     <div class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm">
 
-   <a href="/signup"
-       class="bg-pink-500 pink-500 px-6 py-3 rounded-md shadow text-white hover:text-blue-500">
-       Register
-    </a>
+                        <a href="/signup"
+                            class="bg-pink-500 pink-500 px-6 py-3 rounded-md shadow text-white hover:text-blue-500">
+                            Register
+                        </a>
 
                     </div>
 
@@ -70,7 +70,8 @@
 
                 <form action="" method="POST">
                     {% csrf_token %}
-                    <input type="text" name="username" placeholder="Username"
+                    <!-- value="{{ username }}" ✅ preserves user input --> 
+                    <input type="text" name="username" placeholder="Username" value="{{ username }}"
                         class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800"
                         style="border: 1px solid #d3d5d8 !important;">
                     <input type="password" name="password" placeholder="***********"
@@ -86,7 +87,8 @@
                     <button type="submit"
                         class="bg-gradient-to-br from-pink-500 py-3 rounded-md text-white text-xl to-red-400 w-full">Login</button>
                     <div class="text-center mt-5 space-x-2">
-                        <p class="text-base"> Not registered? <a href="/signup" class="text-blue-500 hover:underline hover:text-blue-700"> Create an account </a></p>
+                        <p class="text-base"> Not registered? <a href="/signup"
+                                class="text-blue-500 hover:underline hover:text-blue-700"> Create an account </a></p>
                     </div>
                 </form>
             </div>
