--- a/social_book/templates/signin.html
+++ b/social_book/templates/signin.html
@@ -20,6 +20,23 @@
 </head>
 
 <body class="bg-gray-100">
+    {% if messages %}
+        {% for message in messages %}
+            <div 
+                class="text-white px-4 py-3 rounded mb-4 mx-auto text-center font-semibold max-w-xl
+                {% if message.tags == 'success' %}
+                    bg-green-500
+                {% elif message.tags == 'error' %}
+                    bg-red-500
+                {% elif message.tags == 'info' %}
+                    bg-blue-500
+                {% else %}
+                    bg-gray-500
+                {% endif %}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
 
 
     <div id="wrapper" class="flex flex-col justify-between h-screen">
