--- a/social_book/templates/setting.html
+++ b/social_book/templates/setting.html
@@ -18,6 +18,24 @@
 </head>
 
 <body>
+     <!-- ✅ Add the alert message block here -->
+    {% if messages %}
+        {% for message in messages %}
+            <div 
+                class="text-white px-4 py-3 rounded mb-4 mx-auto text-center font-semibold max-w-xl
+                {% if message.tags == 'success' %}
+                    bg-green-500
+                {% elif message.tags == 'error' %}
+                    bg-red-500
+                {% elif message.tags == 'info' %}
+                    bg-blue-500
+                {% else %}
+                    bg-gray-500
+                {% endif %}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
     	<!-- Floating centered logo and home text -->
 		<div style="
     position: absolute;
